<resources>
    <string name="app_name">Cryptage</string>

    <string-array name="codec_array">
        <item>@string/code</item>
        <item>@string/decode</item>
    </string-array>
    <string name="title_activity_trect">TRectActivity</string>
    <string name="alphabet_etendu">Alphabet étendu:</string>
    <string name="result">Résultat:</string>
    <string name="crypt">Crypter</string>
    <string name="generic_input">Texte à coder / decoder:</string>
    <string name="key">Clé:</string>
    <string name="polybe_key">Mot clé pour le carré de Polybe:</string>
    <string name="polybe_replace">Lettre à remplacer dans le carré:</string>
    <string name="default_polybe_replace">j</string>
    <string name="delastelle_bloc_size">Taille des blocs de lettres:</string>
    <string name="default_delastelle_bloc_size">4</string>
    <string name="des_input">Message en hexadécimal sur 64 bits à coder / decoder:</string>
    <string name="des_key">Clé en hexadécimal sur 64 bits:</string>
    <string name="hill_matrix_size">Taille de la matrice:</string>
    <string name="default_hill_matrix_size">3</string>
    <string name="hill_list_values">Liste des valeurs de la matrice:</string>
    <string name="atbash">Atbash</string>
    <string name="cesar">César</string>
    <string name="vigenere">Vigénère</string>
    <string name="polybe">Polybe</string>
    <string name="playfair">Playfair</string>
    <string name="hill">Hill</string>
    <string name="trect">Transposition Rectangulaire</string>
    <string name="delastelle">Delastelle</string>
    <string name="exit">Quitter</string>
    <string name="sdes_input">Message en hexadécimal sur 12 bits à coder / decoder:</string>
    <string name="sdes_key">Clé en hexadécimal sur 9 bits:</string>
    <string name="sdes_rounds">Nombre de rondes:</string>
    <string name="sdes_default_rounds">2</string>
    <string name="code">Coder</string>
    <string name="decode">Décoder</string>
    <string name="input_missing">Veuillez saisir un message à coder ou décoder</string>
    <string name="key_missing">Veuillez saisir une clé</string>
    <string name="input_missing_word">Le message à coder ou à décoder doit être un mot ou une phrase</string>
    <string name="key_missing_word">La clé doit être un mot ou une phrase</string>
    <string name="round_missing">Veuillez saisir un nombre de rondes</string>
    <string name="letter_missing">La lettre à remplacer dans le carré de polybe est incorrecte</string>
    <string name="input_not_even">Décodage avec un message de longueur impaire. Vérifiez le message codé.</string>
    <string name="matrix_size_missing">Veuillez saisir une taille pour la matrice carrée représentant la clé</string>
    <string name="matrix_size_0">La taille de la matrice ne peut être 0…</string>
    <string name="matrix_value_missing">Il manque des valeurs dans la matrice que vous avez saisie</string>
    <string name="matrix_not_invertible">La matrice n\'est pas inversible dans Z/26Z : son déterminant n\'est pas premier avec 26</string>
    <string name="matrix_not_square">La matrice doit être carrée</string>
    <string name="block_size_missing">Veuillez saisir la taille des groupes de lettres</string>
    <string name="block_size_0">La taille des blocs ne peut être 0…</string>
    <string name="offset_missing">Veuillez saisir la valeur du décalage</string>
</resources>
