<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.arthur.cryptage.CesarActivity">

    <TextView
        android:id="@+id/tvLabelInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/generic_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etInput"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelInput" />

    <TextView
        android:id="@+id/tvKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/polybe_key"
        app:layout_constraintStart_toStartOf="@+id/etKey"
        app:layout_constraintTop_toBottomOf="@+id/etInput"/>

    <EditText
        android:id="@+id/etKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etInput"
        app:layout_constraintTop_toBottomOf="@+id/tvKey" />

    <Spinner
        android:id="@+id/spinnerCodec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:entries="@array/codec_array"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBlocSize" />

    <TextView
        android:id="@+id/tvLabelRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etKey"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCodec" />

    <TextView
        android:id="@+id/tvRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvLabelRes"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelRes"
        android:layout_marginRight="8dp"/>

    <Button
        android:id="@+id/btRun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/crypt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRes" />

    <TextView
        android:id="@+id/tvLetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/polybe_replace"
        android:maxWidth="116dp"
        app:layout_constraintStart_toStartOf="@+id/etLetter"
        app:layout_constraintTop_toBottomOf="@+id/etKey"/>

    <EditText
        android:id="@+id/etLetter"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text|textPersonName"
        android:maxLength="1"
        android:text="@string/default_polybe_replace"
        app:layout_constraintStart_toStartOf="@+id/etKey"
        app:layout_constraintTop_toBottomOf="@+id/tvLetter" />

    <TextView
        android:id="@+id/tvBlocSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:maxWidth="100dp"
        android:text="@string/delastelle_bloc_size"
        app:layout_constraintEnd_toEndOf="@+id/etKey"
        app:layout_constraintStart_toStartOf="@+id/etBlocSize"
        app:layout_constraintTop_toTopOf="@+id/tvLetter" />

    <EditText
        android:id="@+id/etBlocSize"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="1"
        android:text="@string/default_delastelle_bloc_size"
        app:layout_constraintStart_toEndOf="@+id/tvLetter"
        app:layout_constraintTop_toBottomOf="@+id/tvBlocSize" />
</android.support.constraint.ConstraintLayout>
